stop navbar from breaking on mobile views

--- a/assets/sass/navbar.scss
+++ b/assets/sass/navbar.scss
@@ -9,6 +9,7 @@
     li>a.ddt-large {
         padding-top: 12px;
         padding-bottom: 9px;
+        font-size: 12px;
     }
     li.messages-menu ul.menu li .pull-left i {
         color: #dd4b39;
